tests/protocol_v3/snapshots/protocol_v3__partial_reloads__write_ignores_partial_filtering.snap
---
source: tests/protocol_v3/partial_reloads.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": [
      "application/json"
    ],
    "vary": [
      "X-Inertia"
    ],
    "x-inertia": [
      "true"
    ]
  },
  "body": {
    "type": "json",
    "value": {
      "component": "Events/Index",
      "props": {
        "auth": {
          "user": {
            "name": "Ada"
          }
        },
        "categories": [
          "meetups"
        ],
        "errors": {},
        "events": [
          1,
          2
        ]
      },
      "url": "/events",
      "version": "asset-version-v3"
    }
  }
}
